artifacthub/library/general/gpusharedmemory/1.0.0/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: gpusharedmemory
tests:
- name: gpu-with-shm
  template: template.yaml
  constraint: samples/gpu-with-shm/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-with-shm/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-init-allowed
    object: samples/gpu-with-shm/example_init_allowed.yaml
    assertions:
    - violations: no
- name: gpu-without-shm
  template: template.yaml
  constraint: samples/gpu-without-shm/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-without-shm/example_disallowed.yaml
    assertions:
    - violations: yes
  - name: example-init-disallowed
    object: samples/gpu-without-shm/example_init_disallowed.yaml
    assertions:
    - violations: yes
- name: no-gpu
  template: template.yaml
  constraint: samples/no-gpu/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/no-gpu/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-shm-non-memory
  template: template.yaml
  constraint: samples/gpu-shm-non-memory/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-shm-non-memory/example_disallowed.yaml
    assertions:
    - violations: yes
- name: gpu-shm-wrong-path
  template: template.yaml
  constraint: samples/gpu-shm-wrong-path/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-shm-wrong-path/example_disallowed.yaml
    assertions:
    - violations: yes
- name: gpu-exempt-without-shm
  template: template.yaml
  constraint: samples/gpu-exempt-without-shm/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-exempt-without-shm/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-init-allowed
    object: samples/gpu-exempt-without-shm/example_init_allowed.yaml
    assertions:
    - violations: no
